c2rust-transpile/tests/snapshots/snapshots__transpile@spin.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
assertion_line: 67
expression: cat tests/snapshots/spin.rs
input_file: c2rust-transpile/tests/snapshots/spin.c
---
#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
pub unsafe extern "C" fn spin() {
    ::core::hint::spin_loop();
}

