c2rust-transpile/tests/snapshots/snapshots__transpile@static_assert.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/static_assert.rs
input_file: c2rust-transpile/tests/snapshots/static_assert.c
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_imports,
    unused_mut
)]
#[no_mangle]
pub unsafe extern "C" fn static_assert() {}
